update: neue modelle, fertigstellen
